Adjust tests for paged content
Addresses RISDEV-1526